<resources>
    <string name="app_name">DND Dice Roller</string>
    <string name="d4">4</string>
    <string name="d6">6</string>
    <string name="d8">8</string>
    <string name="d10">10</string>
    <string name="d12">12</string>
    <string name="percent">%</string>
    <string name="d20">20</string>
    <string name="history">History</string>
    <string name="clear">Clear</string>
    <string name="score">0</string>
    <color name="blue">#505050</color>
</resources>
