<?xml version="1.0" encoding="utf-8"?>
<layout>
    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue"
        tools:context=".MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/score"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2">

                    <ImageButton
                        android:id="@+id/d4"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@color/blue"
                        android:text="@string/d4"
                        android:textColor="@android:color/background_light"
                        android:scaleType="fitCenter"
                        android:src="@drawable/d4"/>

                    <ImageButton
                        android:id="@+id/d6"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@color/blue"
                        android:text="@string/d6"
                        android:scaleType="fitCenter"
                        android:src="@drawable/d6" />

                    <ImageButton
                        android:id="@+id/d8"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@color/blue"
                        android:text="@string/d8"
                        android:scaleType="fitCenter"
                        android:src="@drawable/d8"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2">

                    <ImageButton
                        android:id="@+id/d10"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@color/blue"
                        android:text="@string/d10"
                        android:scaleType="fitCenter"
                        android:src="@drawable/d10"/>

                    <ImageButton
                        android:id="@+id/d12"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@color/blue"
                        android:text="@string/d12"
                        android:scaleType="fitCenter"
                        android:src="@drawable/d12"/>

                    <ImageButton
                        android:id="@+id/percent"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@color/blue"
                        android:text="@string/percent"
                        android:scaleType="fitCenter"
                        android:src="@drawable/percentile"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/d20"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:layout_weight="1"
                        android:background="@color/blue"
                        android:text="@string/d20"
                        android:scaleType="fitCenter"
                        android:src="@drawable/d20"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <Button
                        android:id="@+id/history"
                        style="@android:style/Widget.DeviceDefault.Button.Borderless"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/history"
                        android:textColor="@android:color/background_light" />

                    <Button
                        android:id="@+id/clear"
                        style="@style/Widget.AppCompat.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/clear"
                        android:textColor="@android:color/background_light" />
                </TableRow>
            </TableLayout>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</layout>